--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^2.1.4",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
+    "@prisma/client": "^6.2.1",
     "@tailwindcss/forms": "^0.5.7",
     "@vercel/postgres": "^0.8.0",
     "autoprefixer": "10.4.19",
