--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbo",
-    "start": "next start"
+    "start": "next start",
+    "migrate": "prisma format && prisma migrate dev --name migration && prisma generate"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -26,14 +27,15 @@
     "swiper": "^11.2.0",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2",
-    "use-debounce": "^10.0.1",
+    "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "20.14.8",
     "@types/react": "npm:types-react@^19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "prisma": "^6.2.1"
   },
   "pnpm": {
     "overrides": {
