--- a/package.json
+++ b/package.json
@@ -14,11 +14,9 @@
     "@mui/material": "^6.3.1",
     "@prisma/client": "^6.2.1",
     "@tailwindcss/forms": "^0.5.7",
-    "@vercel/postgres": "^0.8.0",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.471.1",
     "next": "^15.0.0",
     "next-auth": "4.24.11",
     "postcss": "8.4.38",
@@ -27,8 +25,7 @@
     "swiper": "^11.2.0",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2",
-    "use-debounce": "^10.0.4",
-    "zod": "^3.23.8"
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
