--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@prisma/client": "^6.2.1",
+    "lucide-react": "0.474.0",
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
