deps: Add AI dependencies and update configuration
- Add TensorFlow.js and Sharp for ML inference
- Update Next.js config for image handling and webpack
- Add bcryptjs for password hashing
- Configure image domains and module resolution

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "build": "next build",
     "dev": "next dev --turbo",
     "start": "next start",
-    "migrate": "prisma format && prisma migrate dev --name migration && prisma generate"
+    "migrate": "prisma format && prisma migrate dev --name migration && prisma generate",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -13,22 +15,31 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@prisma/client": "^6.2.1",
-    "lucide-react": "0.474.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@tensorflow/tfjs": "^4.15.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
+    "@types/bcryptjs": "^3.0.0",
+    "ai": "^3.0.0",
     "autoprefixer": "10.4.19",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "lucide-react": "0.474.0",
     "next": "^15.0.0",
     "next-auth": "4.24.11",
+    "openai": "^4.28.0",
     "postcss": "8.4.38",
     "react": "19.0.0-rc-cd22717c-20241013",
     "react-dom": "19.0.0-rc-cd22717c-20241013",
+    "react-dropzone": "^14.2.3",
+    "sharp": "^0.34.4",
     "swiper": "^11.2.0",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2",
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
+    "@ai-sdk/openai": "^0.0.66",
+    "@playwright/test": "^1.40.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "20.14.8",
     "@types/react": "npm:types-react@^19.0.0-rc.1",
